[gd_scene load_steps=10 format=3 uid="uid://cij2cfjadod67"]

[ext_resource type="Script" uid="uid://b4e3a4at5o5hq" path="res://safe.gd" id="1_h8ivj"]
[ext_resource type="Texture2D" uid="uid://cx1a2ejckwt88" path="res://gui/interact1.png" id="2_1awge"]
[ext_resource type="Texture2D" uid="uid://d0ccsvirwkhlc" path="res://props/safe.png" id="3_h8ivj"]
[ext_resource type="Texture2D" uid="uid://bdihopnvn5cf7" path="res://gui/interact2.png" id="3_omrgo"]
[ext_resource type="FontFile" uid="uid://bu7js3732vtji" path="res://Pixuf.ttf" id="4_awdnx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ideak"]
radius = 18.0278

[sub_resource type="RectangleShape2D" id="RectangleShape2D_awdnx"]
size = Vector2(10, 9.5)

[sub_resource type="SpriteFrames" id="SpriteFrames_0k2he"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_1awge")
}, {
"duration": 1.0,
"texture": ExtResource("3_omrgo")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_awdnx"]
bg_color = Color(0.2757, 0.2757, 0.2757, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.533037, 0.533037, 0.533036, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Safe" type="StaticBody2D"]
script = ExtResource("1_h8ivj")

[node name="InteractionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_ideak")
debug_color = Color(0.715642, 0.471716, 0.286629, 0.42)

[node name="Safe" type="Sprite2D" parent="."]
texture = ExtResource("3_h8ivj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1.75)
shape = SubResource("RectangleShape2D_awdnx")

[node name="InteractionIndicator" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_0k2he")
autoplay = "default"

[node name="InteractText" type="Panel" parent="."]
offset_left = -118.0
offset_top = -113.0
offset_right = -78.0
offset_bottom = -100.0
pivot_offset = Vector2(-16, -5)

[node name="LabelText" type="Label" parent="InteractText"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -13.0
offset_top = -4.0
offset_right = 13.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_awdnx")
theme_override_font_sizes/font_size = 8
text = "Interact"

[node name="SafeUI" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.0
offset_top = -113.0
offset_right = 78.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_awdnx")

[node name="VBoxContainer" type="VBoxContainer" parent="SafeUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.0
offset_top = -24.0
offset_right = 26.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="InstructionLabel" type="Label" parent="SafeUI/VBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("4_awdnx")
theme_override_font_sizes/font_size = 8
text = "enter safe code with keyboard. press enter to try code."
horizontal_alignment = 1
autowrap_mode = 3

[node name="CodeDisplay" type="Label" parent="SafeUI/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_awdnx")
theme_override_font_sizes/font_size = 8
text = "0123"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="SafeUI/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_awdnx")
theme_override_font_sizes/font_size = 8
text = "Exit"
